Created a Integration Test

--- a/library-events-producer/src/main/resources/application.yml
+++ b/library-events-producer/src/main/resources/application.yml
@@ -19,3 +19,6 @@ spring:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+    admin:
+      properties:
+        bootstrap.servers: localhost:9092
