--- a/library-events-producer/src/main/resources/application.yml
+++ b/library-events-producer/src/main/resources/application.yml
@@ -19,6 +19,9 @@ spring:
       bootstrap-servers: localhost:9092
       key-serializer: org.apache.kafka.common.serialization.IntegerSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
+      properties:
+        acks: all
+        retries: 10
     admin:
       properties:
         bootstrap.servers: localhost:9092
